[package]
name = "tinysetqueue"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
authors = ["Roberto Tomás Collins <roberto.tomas.cuentas@gmail.com>"]
description = "A tiny, allocation-free FIFO queue with direct-mapped membership tracking for dense integer domains."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbiemu/tinysetqueue"
homepage = "https://github.com/robbiemu/tinysetqueue"
documentation = "https://docs.rs/tinysetqueue"
keywords = ["queue", "no-std", "embedded", "bfs", "deduplications"]
categories = ["algorithms", "data-structures", "embedded", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[features]
default = ["std", "clear_on_new"]
std = []
clear_on_new = []
pow2 = []
